--- a/ui_server/app/templates/index.html
+++ b/ui_server/app/templates/index.html
@@ -17,6 +17,8 @@
         <div class='row'>
             <div class='col-md-8'>
                 <h3>Device Streams</h3>
+                <h5><button id="start_stream">Start Streaming</button></h5>
+                <h5><button id="stop_stream">Stop Streaming</button></h5>
             </div>
         </div>
     </div>
